WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122658
REGRESSION (
r157205
): Multiple XPath tests fail on Windows
https://bugs.webkit.org/show_bug.cgi?id=122658
Summary
REGRESSION (r157205): Multiple XPath tests fail on Windows
Roger Fong
Reported
2013-10-11 10:32:21 PDT
http://build.webkit.org/results/Apple%20Win%207%20Release%20(Tests)/r157205%20(39106)/results.html
Following
http://trac.webkit.org/changeset/157205
the following tests fail on Windows: fast/text/partial-textruns.html fast/xpath/4XPath/Core/test_predicate_list.html fast/xpath/document-order.html fast/xpath/empty-string-substring.html fast/xpath/nan-to-boolean.html fast/xpath/node-name-case-sensitivity.html fast/xpath/py-dom-xpath/abbreviations.html fast/xpath/py-dom-xpath/axes.html fast/xpath/py-dom-xpath/expressions.html fast/xpath/py-dom-xpath/functions.html fast/xpath/py-dom-xpath/paths.html fast/xpath/py-dom-xpath/predicates.html
Attachments
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-10-11 11:15:04 PDT
There were follow-up fixes to that in <
http://trac.webkit.org/r157287
>, but Windows is still failing. Darin, is this something you can look into? Not sure how XPath failures can be Windows specific, the failure diffs look quite surprising to me.
Roger Fong
Comment 2
2013-10-11 17:43:29 PDT
After a brief debugging session we managed to find the fix, committed here:
http://trac.webkit.org/changeset/157324
Alexey Proskuryakov
Comment 3
2013-10-11 18:41:38 PDT
How is it possible that this wasn't causing failures on Mac? :(
Darin Adler
Comment 4
2013-10-11 19:29:02 PDT
(In reply to
comment #3
)
> How is it possible that this wasn't causing failures on Mac? :(
This mistake was in a Windows-only workaround for an MSVC compiler bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug