[Windows] Fix for fast/xpath test regressions caused by r157205. https://bugs.webkit.org/show_bug.cgi?id=122658.

Reviewed by Darin Adler.

* xml/XPathStep.h:
(WebCore::XPath::Step::NodeTest::NodeTest):
(WebCore::XPath::Step::NodeTest::operator=):
We were incorrectly setting the predicate list to null instead of the predicate list of the NodeTest being passed in.


Canonical link: https://commits.webkit.org/140793@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157324 268f45cc-cd09-0410-ab3c-d52691b4dbfc